--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -27,7 +27,7 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>21</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -51,10 +51,13 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+            	<artifactId>maven-compiler-plugin</artifactId>
+            	<version>3.10.0</version>  <!-- Use the latest version -->
+            	<configuration>
+                	<release>21</release>  <!-- Set to JDK 21 -->
+            	</configuration>
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
