Setting Up for Online
Created skeleton of backend code to use websockets for online mode, changed UI for selecting modes at start

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -34,7 +34,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -58,6 +61,10 @@
                 	<release>21</release>  <!-- Set to JDK 21 -->
             	</configuration>
 			</plugin>
+			<plugin>
+               <groupId>org.springframework.boot</groupId>
+               <artifactId>spring-boot-maven-plugin</artifactId>
+           </plugin>
 		</plugins>
 	</build>
 </project>
